fix: implement overflow hidden effect

--- a/singolo1.css
+++ b/singolo1.css
@@ -219,9 +219,9 @@ ul {
   padding-bottom: 38px;
 }
 .services-description {
-  font-weight: 300;
+  font-weight: 400;
   line-height: 32px;
-  margin-bottom: 32px;
+  margin-bottom: 35px;
 }
 .services-list {
   display: flex;
@@ -233,6 +233,10 @@ ul {
   padding-left: 78px;
   position: relative;
   width: 300px;
+}
+.service p {
+  max-height: 66px;
+  overflow: hidden;
 }
 .service:hover,
 .service:hover:before {
